fg-demo/form-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: form-gateway
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: form-gateway
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: form-gateway
spec:
  serviceName: form-gateway
  replicas: 1
  selector:
    matchLabels:
      app: form-gateway
  template:
    metadata:
      labels:
        app: form-gateway
    spec:
      containers:
        - name: form-gateway
          image: 010438473788.dkr.ecr.ap-northeast-2.amazonaws.com/form-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /ePapyrus/fg
              subPath: ./form-gateway
        - name: mariadb
          image: mariadb:latest
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: ./mariadb
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 4Gi
