fg-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fg-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/app-root: /fg/view/auth
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fg.demo.epapyrus.com
      secretName: fg.demo.epapyrus.com-tls
  rules:
    - host: fg.demo.epapyrus.com
      http:
        paths:
          - path: /streamdocs
            pathType: Prefix
            backend:
              service:
                name: streamdocs
                port:
                  number: 8080
          - path: /fg
            pathType: Prefix
            backend:
              service:
                name: form-gateway
                port:
                  number: 8080
